--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1554,6 +1554,7 @@ h2 span,
 .link-deafult {
   color: #008acc;
   text-decoration: underline;
+  display: inline-block;
 }
 
 .link-icon {
@@ -1953,6 +1954,14 @@ h2 span,
   background-color: #f4f5f5;
 }
 
+.change-profile.xs-hide {
+  display: block;
+}
+
+.change-profile.xs-show {
+  display: none;
+}
+
 input,
 textarea {
   font-size: 12px;
@@ -1974,7 +1983,7 @@ textarea {
 
 .form-search__input {
   display: block;
-  width: 94%;
+  width: 97%;
 }
 
 .form__title {
@@ -2025,6 +2034,34 @@ textarea {
 
 .form__box_small {
   max-width: 270px;
+}
+
+.form__box_special-label {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.form__box_special-label label {
+  float: none;
+  display: block;
+  text-align: left;
+}
+
+.form__box_special-label .form-sender {
+  float: none;
+  display: block;
+  -webkit-box-ordinal-group: 0;
+  -webkit-order: -1;
+      -ms-flex-order: -1;
+          order: -1;
+  text-align: right;
 }
 
 .form-slide-input {
@@ -2603,6 +2640,10 @@ textarea {
 
 .form-filters__label i:before {
   color: inherit;
+}
+
+.form-filters__select {
+  text-align: left;
 }
 
 .form-filters__search {
@@ -4691,7 +4732,6 @@ select.form-control:not([size]):not([multiple]) {
 
 .card__title {
   min-height: 44px;
-  max-height: 55px;
   margin-bottom: 15px;
   font-family: "PT Serif", serif;
   font-size: 17px;
@@ -4738,6 +4778,11 @@ select.form-control:not([size]):not([multiple]) {
 
 .card__text a:not(.card__more) {
   text-decoration: none;
+}
+
+.card__text_ads {
+  word-wrap: break-word;
+  min-height: 132px;
 }
 
 .card__text_404 {
@@ -5074,6 +5119,10 @@ select.form-control:not([size]):not([multiple]) {
   max-height: 305px;
 }
 
+.card-half__title {
+  font-size: 22px;
+}
+
 .card-half-slider {
   overflow: hidden;
   background-color: #fff;
@@ -5307,7 +5356,7 @@ select.form-control:not([size]):not([multiple]) {
   font-family: Roboto, sans-serif;
   font-size: 22px;
   font-weight: 500;
-  line-height: 17px;
+  line-height: 1.4;
 }
 
 .card-modal .modal-title > * {
@@ -5372,20 +5421,13 @@ select.form-control:not([size]):not([multiple]) {
   text-transform: uppercase;
 }
 
-.card-modal .modal-table__line {
-  font-size: 0;
+.card-modal .modal-table td p {
+  min-width: 110px;
 }
 
-.card-modal .modal-table__line:nth-child(2n) {
-  background-color: #f4f5f5;
-}
-
-.card-modal .modal-table__col {
-  display: inline-block;
-  width: 50%;
-  padding: 10px;
-  vertical-align: top;
-  font-size: 16px;
+.card-modal .modal-table .table td:first-child,
+.card-modal .modal-table .table th:first-child {
+  max-width: none;
 }
 
 .card-tabs .nav-tabs .nav-link {
@@ -5458,6 +5500,7 @@ select.form-control:not([size]):not([multiple]) {
 .card-links__items {
   width: 100%;
   padding-left: 28px;
+  max-width: 85%;
 }
 
 .card-links__item {
@@ -5624,6 +5667,10 @@ select.form-control:not([size]):not([multiple]) {
   font-size: 12px;
   font-weight: 400;
   line-height: 14px;
+}
+
+.card-person__text p {
+  margin-bottom: 10px;
 }
 
 .card-person__text p strong {
@@ -6019,6 +6066,14 @@ select.form-control:not([size]):not([multiple]) {
   margin-top: auto;
   height: 100%;
   min-height: 115px;
+}
+
+.widget-imgbox[style] {
+  min-height: 100%;
+}
+
+.widget-imgbox[style] img {
+  opacity: 0;
 }
 
 .widget-imgbox_full {
@@ -6730,6 +6785,10 @@ select.form-control:not([size]):not([multiple]) {
   clear: both;
 }
 
+.article-author p span {
+  display: inline-block;
+}
+
 .article-author .article-author__username {
   margin-top: 0.5px;
 }
@@ -7255,10 +7314,11 @@ select.form-control:not([size]):not([multiple]) {
   font-family: Roboto, sans-serif;
   font-size: 20px;
   font-weight: 400;
-  line-height: 17px;
+  line-height: 1.4;
   -webkit-transition: 0.4s;
   -o-transition: 0.4s;
   transition: 0.4s;
+  word-break: break-word;
 }
 
 .circuit-item__link_line-right {
@@ -7383,6 +7443,10 @@ select.form-control:not([size]):not([multiple]) {
 
 .main-icon__img.active {
   color: #757575;
+}
+
+.main-icon__button {
+  margin-bottom: 5px;
 }
 
 .main-icon__images {
@@ -9537,6 +9601,30 @@ select.form-control:not([size]):not([multiple]) {
     padding-bottom: 3px;
   }
 
+  .form-search__label {
+    padding: 6px 10px 6px;
+  }
+
+  .form__input_slim {
+    max-width: 150px;
+  }
+
+  .form__buttonbox {
+    -webkit-box-align: start;
+    -webkit-align-items: flex-start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+
+  .form__button {
+    min-width: 145px;
+  }
+
+  .form-checkbox_slide {
+    margin-right: 10px;
+    min-height: 30px;
+  }
+
   .modal-main .modal-video iframe {
     height: 600px;
   }
@@ -9618,12 +9706,14 @@ select.form-control:not([size]):not([multiple]) {
   .header-search .form-search__label {
     padding-top: 2px;
     padding-bottom: 2px;
+    padding-right: 6px;
     background-color: #fbfbfb;
   }
 
   .header-search .form-search__input {
     display: block;
     width: 100%;
+    max-width: 78px;
     font-size: 12px;
     line-height: 12px;
     vertical-align: middle;
@@ -9714,8 +9804,8 @@ select.form-control:not([size]):not([multiple]) {
     opacity: 1;
   }
 
-  .header-nav-system-wrap {
-    margin-top: 10px;
+  .header-nav-system {
+    padding-top: 12px;
   }
 
   .header-nav-system__item {
@@ -9760,7 +9850,7 @@ select.form-control:not([size]):not([multiple]) {
 
   .content-text h3 {
     margin-bottom: 10px;
-    font-size: 18px;
+    font-size: 20px;
   }
 
   .content-text h3 .sub {
@@ -9768,7 +9858,7 @@ select.form-control:not([size]):not([multiple]) {
   }
 
   .content-text p {
-    font-size: 12px;
+    font-size: 14px;
     margin-bottom: 0;
   }
 
@@ -9802,6 +9892,18 @@ select.form-control:not([size]):not([multiple]) {
     margin-top: 180px;
   }
 
+  .card__title {
+    font-size: 15px;
+  }
+
+  .card__text p {
+    font-size: 15px;
+  }
+
+  .card__text_ads {
+    min-height: 120px;
+  }
+
   .card-full__imgbox {
     height: 300px;
   }
@@ -9820,6 +9922,10 @@ select.form-control:not([size]):not([multiple]) {
 
   .card-half_imgbg .card__content {
     margin-top: 230px;
+  }
+
+  .card-half__title {
+    font-size: 15px;
   }
 
   .card-half-slider__imgbox {
@@ -9902,16 +10008,26 @@ select.form-control:not([size]):not([multiple]) {
     height: 150px;
   }
 
+  .widget-imgbox__text h3 {
+    font-size: 14px;
+  }
+
+  .widget-imgbox__text p {
+    font-size: 10px;
+  }
+
   .widget-content {
     padding: 10px;
   }
 
   .widget-content_ads {
-    min-height: 275px;
+    min-height: 265px;
   }
 
   .widget-content__right {
-    max-width: 54px;
+    max-width: none;
+    width: 85px;
+    min-height: 110px;
   }
 
   .widget-title {
@@ -9931,7 +10047,11 @@ select.form-control:not([size]):not([multiple]) {
   }
 
   .widget-text {
-    font-size: 8px;
+    font-size: 10px;
+  }
+
+  .widget-text h4 {
+    font-size: 12px;
   }
 
   .widget-text_big {
@@ -9965,12 +10085,15 @@ select.form-control:not([size]):not([multiple]) {
 
   .circuit-item__link {
     width: 205px;
-    font-size: 11px;
+    font-size: 12px;
     padding: 5px 10px;
   }
 
-  .main-icon__item {
+  .main-icon__items {
     padding-left: 0;
+  }
+
+  .main-icon__item {
     margin-left: 0;
   }
 }
@@ -10015,9 +10138,8 @@ select.form-control:not([size]):not([multiple]) {
   }
 
   .link-small {
-    font-size: 9px;
-    max-height: 10px;
-    overflow: hidden;
+    font-size: 10px;
+    margin-bottom: 5px;
   }
 
   .link-icon-save:before {
@@ -10062,12 +10184,25 @@ select.form-control:not([size]):not([multiple]) {
   }
 
   .button-width-142 {
-    min-width: 80px;
+    min-width: 95px;
   }
 
   .form-search__label {
     padding: 3px 10px 3px;
     font-size: 12px;
+  }
+
+  .form-slide-input {
+    padding-top: 10px;
+  }
+
+  .form__button {
+    min-width: 100px;
+  }
+
+  .form-checkbox_slide {
+    min-height: auto;
+    display: block;
   }
 
   .modal-main .modal-video iframe {
@@ -10137,7 +10272,7 @@ select.form-control:not([size]):not([multiple]) {
   }
 
   .content-titlebox_dark h4 {
-    font-size: 12px;
+    font-size: 16px;
   }
 
   .content-subtitle h2 {
@@ -10149,24 +10284,20 @@ select.form-control:not([size]):not([multiple]) {
   }
 
   .content-text {
-    font-size: 8px;
+    font-size: 10px;
   }
 
   .content-text h3 {
     margin-bottom: 5px;
-    font-size: 11px;
-  }
-
-  .content-text p {
-    font-size: 8px;
+    font-size: 18px;
   }
 
   .content-text_special p {
-    font-size: 8px;
+    font-size: 10px;
   }
 
   .like-button {
-    font-size: 8px;
+    font-size: 10px;
     line-height: 1.4;
     vertical-align: top;
   }
@@ -10179,7 +10310,7 @@ select.form-control:not([size]):not([multiple]) {
 
   .spoiler-title .slide-count {
     font-size: 12px;
-    line-height: 14.4px;
+    line-height: 19px;
   }
 
   .card {
@@ -10268,6 +10399,11 @@ select.form-control:not([size]):not([multiple]) {
 
   .card__text p {
     font-size: 9px;
+    margin-bottom: 6px;
+  }
+
+  .card__text_ads {
+    min-height: 80px;
   }
 
   .card__text_mobile {
@@ -10279,7 +10415,7 @@ select.form-control:not([size]):not([multiple]) {
   }
 
   .card-date {
-    font-size: 8px;
+    font-size: 10px;
   }
 
   .card__more {
@@ -10463,6 +10599,10 @@ select.form-control:not([size]):not([multiple]) {
     font-size: 27px;
   }
 
+  .card-links__items {
+    max-width: 100%;
+  }
+
   .card-links__item {
     padding: 0;
     margin-bottom: 5px;
@@ -10514,6 +10654,10 @@ select.form-control:not([size]):not([multiple]) {
     font-size: 8px;
     line-height: 1.4;
     margin-bottom: 10px;
+  }
+
+  .card-person__text p {
+    margin-bottom: 0;
   }
 
   .widget-calendar {
@@ -10700,8 +10844,16 @@ select.form-control:not([size]):not([multiple]) {
     max-width: 350px;
   }
 
+  .profile-info tr {
+    vertical-align: top;
+  }
+
   .profile-info tr td {
     min-width: 122px;
+  }
+
+  .main-icon__items {
+    padding-left: 28px;
   }
 
   .main-icon__imgbox {
@@ -10714,6 +10866,12 @@ select.form-control:not([size]):not([multiple]) {
   }
 }
 
+@media screen and (max-width: 991.98px) and (max-width: 575px) {
+  .card-person__text {
+    font-size: 14px;
+  }
+}
+
 @media screen and (max-width: 767.98px) {
   .button-burg {
     display: inline-block;
@@ -10722,6 +10880,10 @@ select.form-control:not([size]):not([multiple]) {
   .button-big-o {
     min-width: 148px;
     font-size: 9px;
+  }
+
+  .button-width-142 {
+    min-width: 95px;
   }
 
   .modal-main-slider-wrap_bottom {
@@ -10749,6 +10911,10 @@ select.form-control:not([size]):not([multiple]) {
 
   .header .breadcrumb {
     padding-bottom: 10px;
+  }
+
+  .header-nav-system {
+    padding-top: 5px;
   }
 
   .header-nav-system__content {
@@ -10806,7 +10972,7 @@ select.form-control:not([size]):not([multiple]) {
   }
 
   .like-button {
-    font-size: 12px;
+    font-size: 16px;
   }
 
   .card-modern__info {
@@ -10815,6 +10981,10 @@ select.form-control:not([size]):not([multiple]) {
 
   .card-modern__content {
     max-width: none;
+  }
+
+  .card-half__text {
+    margin-bottom: 6px;
   }
 
   .card-icons__iconbox {
@@ -10836,6 +11006,10 @@ select.form-control:not([size]):not([multiple]) {
     padding-left: 50px;
   }
 
+  .card-links__items_small-offset {
+    padding-left: 15px;
+  }
+
   .card-links__left {
     width: 120px;
   }
@@ -10850,7 +11024,7 @@ select.form-control:not([size]):not([multiple]) {
   }
 
   .card-links__lnk_small {
-    font-size: 8px;
+    font-size: 12px;
   }
 
   .card-calendar .ui-datepicker-header .ui-datepicker-title * {
@@ -10906,6 +11080,10 @@ select.form-control:not([size]):not([multiple]) {
     font-size: 16px;
   }
 
+  .link-small {
+    font-size: 14px;
+  }
+
   .button {
     font-size: 10px;
     min-width: 62px;
@@ -10920,8 +11098,26 @@ select.form-control:not([size]):not([multiple]) {
     max-width: 130px;
   }
 
+  .button-big-o {
+    min-width: 135px;
+    padding: 12px 10px;
+    margin-bottom: 11px;
+  }
+
+  .change-profile.xs-hide {
+    display: none;
+  }
+
+  .change-profile.xs-show {
+    display: block;
+  }
+
   .form__box_flex {
     display: block;
+  }
+
+  .form-slide-input {
+    padding-top: 0;
   }
 
   .form-label_slim {
@@ -10935,6 +11131,31 @@ select.form-control:not([size]):not([multiple]) {
 
   .form-sender {
     margin-bottom: 10px;
+  }
+
+  .form__input::-webkit-input-placeholder,
+  .form__textarea::-webkit-input-placeholder {
+    font-size: 16px;
+  }
+
+  .form__input:-ms-input-placeholder,
+  .form__textarea:-ms-input-placeholder {
+    font-size: 16px;
+  }
+
+  .form__input::-ms-input-placeholder,
+  .form__textarea::-ms-input-placeholder {
+    font-size: 16px;
+  }
+
+  .form__input::placeholder,
+  .form__textarea::placeholder {
+    font-size: 16px;
+  }
+
+  .form__input_slim {
+    padding-top: 2px;
+    line-height: normal;
   }
 
   .form-checkbox {
@@ -11007,8 +11228,15 @@ select.form-control:not([size]):not([multiple]) {
   .header .breadcrumb {
     margin-left: -15px;
     margin-right: -15px;
-    margin-top: 10px;
+    margin-top: 9px;
     padding-bottom: 8px;
+  }
+
+  .header-nav-system__content {
+    max-height: -webkit-calc(100vh - 147px);
+    max-height: calc(100vh - 147px);
+    overflow-y: scroll;
+    overflow-x: hidden;
   }
 
   .header-nav-system-wrap {
@@ -11019,6 +11247,13 @@ select.form-control:not([size]):not([multiple]) {
   .header-nav-system-wrap.mobile-hide {
     display: none !important;
     opacity: 0;
+  }
+
+  .menu-nav-header-group {
+    max-height: -webkit-calc(100vh - 147px);
+    max-height: calc(100vh - 147px);
+    overflow-y: scroll;
+    overflow-x: hidden;
   }
 
   .menu-nav-group {
@@ -11037,13 +11272,21 @@ select.form-control:not([size]):not([multiple]) {
     font-size: 24px;
   }
 
+  .content-titlebox_dark h4 {
+    font-size: 18px;
+  }
+
   .content-text h3 {
-    font-size: 13px;
+    font-size: 16px;
   }
 
   .content-text p {
-    font-size: 10px;
+    font-size: 16px;
     margin-bottom: 10px;
+  }
+
+  .content-text_special p {
+    font-size: 14px;
   }
 
   .content-text.video-caption {
@@ -11100,6 +11343,10 @@ select.form-control:not([size]):not([multiple]) {
     font-size: 16px;
   }
 
+  .card__text_ads {
+    min-height: auto;
+  }
+
   .card__text_mobile {
     font-size: 14px;
   }
@@ -11109,7 +11356,7 @@ select.form-control:not([size]):not([multiple]) {
   }
 
   .card-date {
-    font-size: 12px;
+    font-size: 16px;
     max-width: 200px;
   }
 
@@ -11164,8 +11411,22 @@ select.form-control:not([size]):not([multiple]) {
   }
 
   .card-icons__iconbox {
-    font-size: 10px;
     padding: 6px;
+    margin-bottom: 5px;
+    width: 16.66666%;
+    font-size: 20px;
+  }
+
+  .card-modal .modal-header {
+    margin-bottom: 15px;
+  }
+
+  .card-modal .modal-title {
+    margin-bottom: 5px;
+  }
+
+  .card-modal .modal-text p {
+    margin-bottom: 6px;
   }
 
   .card-tabs .nav-link {
@@ -11180,6 +11441,16 @@ select.form-control:not([size]):not([multiple]) {
 
   .card-links__lnkbox .link-icon-save:before {
     font-size: 22px;
+  }
+
+  .card-person__imgbox {
+    width: 110px;
+    height: 125px;
+    margin-right: 15px;
+  }
+
+  .card-person__content {
+    max-width: 110px;
   }
 
   .card-calendar .ui-datepicker-header .content-subtitle {
@@ -11237,6 +11508,7 @@ select.form-control:not([size]):not([multiple]) {
   .article-author .article-author__left {
     margin-top: 0;
     line-height: normal;
+    margin-bottom: 5px;
   }
 
   .article-author .article-author__username {
@@ -11245,11 +11517,16 @@ select.form-control:not([size]):not([multiple]) {
   }
 
   .article-author__left {
-    font-size: 10px;
+    font-size: 14px;
+    float: none;
+    text-align: left;
+    margin-bottom: 5px;
   }
 
   .article-author__username {
-    font-size: 8px;
+    font-size: 12px;
+    float: none;
+    text-align: left;
   }
 
   .article-preview-text {
@@ -11270,36 +11547,78 @@ select.form-control:not([size]):not([multiple]) {
     left: -22.5px;
   }
 
+  .comment__nickname {
+    font-size: 16px;
+  }
+
+  .comment__text p {
+    font-size: 16px;
+    line-height: 1.4;
+  }
+
   .comments-dark {
     margin-top: 15px;
     padding: 15px 15px;
   }
 
-  .comments-dark .article-author__left {
-    font-size: 8px;
-    margin: 0;
+  .comments-dark .article-author {
+    padding: 3px 5px;
   }
 
   .comments-dark .article-author__username {
-    font-size: 6px;
-    margin: 0;
+    font-size: 13px;
   }
 
-  .comments-dark .article-author .article-author__left {
-    line-height: 16px;
+  .table {
+    border: none;
+    -webkit-border-radius: 5px;
+            border-radius: 5px;
   }
 
-  .comments-dark .article-author .article-author__username {
-    line-height: 16px;
+  .table-inn {
+    border: 1px solid #bcbdc0;
+    -webkit-border-radius: 5px;
+            border-radius: 5px;
   }
 
   .circuit-item__link {
     width: 90px;
-    font-size: 9px;
-    line-height: 1.4;
+    font-size: 11px;
+    line-height: 1.2;
+  }
+
+  .main-icon__card {
+    margin-bottom: 5px;
   }
 
   .main-icon__items {
     padding-left: 14px;
+  }
+
+  .main-icon__item {
+    margin-bottom: 5px;
+  }
+
+  .main-icon__title {
+    text-align: left;
+  }
+
+  .main-icon__input {
+    width: 160px;
+  }
+
+  .main-icon__imgbox > * {
+    vertical-align: middle;
+  }
+
+  .main-icon__button {
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+  input,
+  textarea {
+    font-size: 16px !important;
   }
 }
