--- a/app/pug/ads.pug
+++ b/app/pug/ads.pug
@@ -30,7 +30,7 @@ block vars
 							p
 			.col-12.col-sm-9
 				.card
-					.card__text.card__text_mobile
+					.card__text.card__text_mobile.card__text_ads
 						p <strong>Контакты:</strong> +7&nbsp;(903)&nbsp;033&nbsp;03&nbsp;03,&ensp;
 							a.link-deafult(href="mailto:/contact@omk.ru") contactvaleryvasiley@omk.ru
 						p
