--- a/app/pug/blocks/_block-article-only-text.pug
+++ b/app/pug/blocks/_block-article-only-text.pug
@@ -36,4 +36,5 @@ article(id=ID).article.cards
 		.article-author
 			each item in ['#статья','#событие2019','#фамилия','#справочное_слово']
 				a.hashtag(href='#')= item
-			p Автор статьи: Елена Мацинова
+			p= 'Автор статьи: '
+				span Елена Мацинова
