--- a/app/pug/cards/_cards-half.pug
+++ b/app/pug/cards/_cards-half.pug
@@ -15,7 +15,7 @@
 							button.like-button.like-button_light
 								i.icon-like
 								span.like-count 1286
-					.card__title.card-color-light
+					.card__title.card-half__title.card-color-light
 						a(href='#')
 							| Насосно-компрессорные трубы ТЭСЦ-1
 					.card-date.card-date_light
@@ -36,7 +36,7 @@
 						button.like-button
 							i.icon-like
 							span.like-count 1286
-				.card__title
+				.card__title.card-half__title
 					a(href='#')
 						| Насосно-компрессорные трубы ТЭСЦ-1
 				.card-date
