--- a/app/pug/modules/_base.pug
+++ b/app/pug/modules/_base.pug
@@ -9,6 +9,8 @@ html(lang='ru')
 		meta(charset='utf-8')
 		meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
 		//meta(name='viewport', content='width=device-width')
+		//+ie('if lte IE 9', '<meta name="viewport" content="width=1230px">')
+
 		meta(name='description', content='')
 		meta(name='author', content='')
 		link(rel='stylesheet', href='css/normalize.css')
