--- a/app/pug/modules/_header-structure.pug
+++ b/app/pug/modules/_header-structure.pug
@@ -388,7 +388,7 @@ header.header
 					.col-xl-2.d-table
 						.header-nav-system-button-inn.header-button-inn.button-inn
 							.nav-more.btn-group
-								button#header-navMore.button.header-button.header-nav-system-button(type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
+								button#header-nav-more.button.header-button.header-nav-system-button(type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
 									| Ещё
 									i.icon-arrow-down
 								ul.nav-more-list.dropdown-menu.dropdown-menu-right
