--- a/app/pug/modules/_header.pug
+++ b/app/pug/modules/_header.pug
@@ -448,10 +448,74 @@ header.header.fixed.show
 						.col-12.col-md-2.d-table
 							.button-more-inn.header-button-inn.button-inn
 								.nav-more.btn-group.dropup
-									button#header-navMore.button.header-button.button-more.button-more-lg-min.button-more-xl-full(type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
+									button#header-nav-more.button.header-button.button-more.button-more-lg-min.button-more-xl-full(type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
 										| Ещё
 										i.icon-arrow-down
-									ul.nav-more-list.dropdown-menu.dropdown-menu-right
+									ul#header-nav-more-item.nav-more-list.dropdown-menu.dropdown-menu-right
+										li.nav-more-list__item
+											a.link.link-nav.nav-more-list__link(href='#') Стандарты РосКосмос
+										li.nav-more-list__item
+											a.link.link-nav.nav-more-list__link(href='#') Газпром Системы
+										li.nav-more-list__item
+											a.link.link-nav.nav-more-list__link(href='#') SAP Super Tasks
+										li.nav-more-list__item
+											a.link.link-nav.nav-more-list__link(href= links.productions_system) Производственные
+										li.nav-more-list__item
+											a.link.link-nav.nav-more-list__link(href='#') Системы Всех Систем
+										li.nav-more-list__item
+											a.link.link-nav.nav-more-list__link(href='#') Логистика
+										li.nav-more-list__item
+											a.link.link-nav.nav-more-list__link(href='#') SAP SSH
+										li.nav-more-list__item
+											a.link.link-nav.nav-more-list__link(href='#') Ширина под самое длинное название с учетом Bold
+										li.nav-more-list__item
+											a.link.link-nav.nav-more-list__link(href='#') Стандарты РосКосмос
+										li.nav-more-list__item
+											a.link.link-nav.nav-more-list__link(href='#') Газпром Системы
+										li.nav-more-list__item
+											a.link.link-nav.nav-more-list__link(href='#') SAP Super Tasks
+										li.nav-more-list__item
+											a.link.link-nav.nav-more-list__link(href= links.productions_system) Производственные
+										li.nav-more-list__item
+											a.link.link-nav.nav-more-list__link(href='#') Системы Всех Систем
+										li.nav-more-list__item
+											a.link.link-nav.nav-more-list__link(href='#') Логистика
+										li.nav-more-list__item
+											a.link.link-nav.nav-more-list__link(href='#') SAP SSH
+										li.nav-more-list__item
+											a.link.link-nav.nav-more-list__link(href='#') Ширина под самое длинное название с учетом Bold
+										li.nav-more-list__item
+											a.link.link-nav.nav-more-list__link(href='#') Стандарты РосКосмос
+										li.nav-more-list__item
+											a.link.link-nav.nav-more-list__link(href='#') Газпром Системы
+										li.nav-more-list__item
+											a.link.link-nav.nav-more-list__link(href='#') SAP Super Tasks
+										li.nav-more-list__item
+											a.link.link-nav.nav-more-list__link(href= links.productions_system) Производственные
+										li.nav-more-list__item
+											a.link.link-nav.nav-more-list__link(href='#') Системы Всех Систем
+										li.nav-more-list__item
+											a.link.link-nav.nav-more-list__link(href='#') Логистика
+										li.nav-more-list__item
+											a.link.link-nav.nav-more-list__link(href='#') SAP SSH
+										li.nav-more-list__item
+											a.link.link-nav.nav-more-list__link(href='#') Ширина под самое длинное название с учетом Bold
+										li.nav-more-list__item
+											a.link.link-nav.nav-more-list__link(href='#') Стандарты РосКосмос
+										li.nav-more-list__item
+											a.link.link-nav.nav-more-list__link(href='#') Газпром Системы
+										li.nav-more-list__item
+											a.link.link-nav.nav-more-list__link(href='#') SAP Super Tasks
+										li.nav-more-list__item
+											a.link.link-nav.nav-more-list__link(href= links.productions_system) Производственные
+										li.nav-more-list__item
+											a.link.link-nav.nav-more-list__link(href='#') Системы Всех Систем
+										li.nav-more-list__item
+											a.link.link-nav.nav-more-list__link(href='#') Логистика
+										li.nav-more-list__item
+											a.link.link-nav.nav-more-list__link(href='#') SAP SSH
+										li.nav-more-list__item
+											a.link.link-nav.nav-more-list__link(href='#') Ширина под самое длинное название с учетом Bold
 										li.nav-more-list__item
 											a.link.link-nav.nav-more-list__link(href='#') Стандарты РосКосмос
 										li.nav-more-list__item
