--- a/app/pug/modules/_main-icons.pug
+++ b/app/pug/modules/_main-icons.pug
@@ -1,7 +1,7 @@
 // mixins ------------------------------------------------------------------------------------------------------------
 
 mixin iconLinksBlock($icon, $text, $id)
-	.card.card-links.main-icon__card.margin-bottom-0.padding-bottom-lg-30.padding-bottom-sm-10
+	.card.card-links.main-icon__card.margin-bottom-sm-0.padding-bottom-lg-30.padding-bottom-sm-10
 		.card-links-wrap
 			.card-links__img
 				.card-links__imgbox.main-icon__imgbox
