--- a/app/pug/widgets/_widget-slider-02.pug
+++ b/app/pug/widgets/_widget-slider-02.pug
@@ -24,7 +24,7 @@
 								| подразделения 28 
 								br
 				.widget-content__right
-					.widget-imgbox
+					.widget-imgbox(style="background-image: url(img/widget-img-07.jpg);")
 						img(src="img/widget-img-07.jpg" alt="image")
 		#widget2-tab2.widget-tab.widget-slider__tab 
 			.widget-content.widget-slider__content
@@ -50,7 +50,7 @@
 								br
 								| эффективностью
 				.widget-content__right
-					.widget-imgbox
+					.widget-imgbox(style="background-image: url(img/widget-img-05.png);")
 						img(src="img/widget-img-05.png" alt="image")
 		#widget2-tab1.widget-tab.widget-slider__tab
 			.widget-content.widget-slider__content
@@ -72,5 +72,5 @@
 								br
 								| правления ОМК
 				.widget-content__right
-					.widget-imgbox
+					.widget-imgbox(style="background-image: url(img/widget-img-06.jpg);")
 						img(src="img/widget-img-06.jpg" alt="image")
