--- a/app/pug/articles/_article-03.pug
+++ b/app/pug/articles/_article-03.pug
@@ -23,4 +23,5 @@ article(id=ID, class=articleClass).article
 		.article-author
 			each item in ['#статья','#событие2019','#фамилия','#справочное_слово']
 				a.hashtag(href='#')= item
-			p Автор статьи: Елена Мацинова
+			p= 'Автор статьи: '
+				span Елена Мацинова
