--- a/app/pug/cards/_card-twothird-third-slider.pug
+++ b/app/pug/cards/_card-twothird-third-slider.pug
@@ -10,7 +10,7 @@
 					i.icon-like
 					span.like-count 1586
 	include ../modals/_modal-content-comments
-	.card-full-slider-wrap.card-wrap.card-full-wrap
+	.card-full-slider-wrap.card-wrap.card-full-wrap.mobile-hide
 		.card-full-slider__item
 			.card__imgwrap
 				- var imgUrl='img/article-img-02.jpg';
@@ -24,6 +24,31 @@
 				- var imgUrl='img/article-img-02.jpg';
 				.card__imgbox.card__imgbox_twothird(style='background-image: url('+imgUrl+')', data-target="#modal-content-slider", data-toggle="modal", data-target-content='#cardModalSlider-02')
 					img.card-image(src=imgUrl)
+				- var imgUrl = 'img/article-img-01.jpg';
+				.card__imgbox.card__imgbox_third(style='background-image: url('+imgUrl+')',  data-target="#modal-content-slider", data-toggle="modal",data-target-content='#cardModalSlider-02')
+					img.card-image(src=imgUrl)
+
+	.card-mobile-slider-wrap.card-wrap.card-full-wrap.mobile-show
+		.card-full-slider__item
+			.card__imgwrap
+				- var imgUrl='img/article-img-02.jpg';
+				.card__imgbox.card__imgbox_twothird(style='background-image: url('+imgUrl+')', data-target="#modal-content-slider", data-toggle="modal", data-target-content='#cardModalSlider-02')
+					img.card-image(src=imgUrl)
+
+		.card-full-slider__item
+			.card__imgwrap
+				- var imgUrl = 'img/article-img-01.jpg';
+				.card__imgbox.card__imgbox_third(style='background-image: url('+imgUrl+')',  data-target="#modal-content-slider", data-toggle="modal",data-target-content='#cardModalSlider-02')
+					img.card-image(src=imgUrl)
+
+		.card-full-slider__item
+			.card__imgwrap
+				- var imgUrl='img/article-img-02.jpg';
+				.card__imgbox.card__imgbox_twothird(style='background-image: url('+imgUrl+')', data-target="#modal-content-slider", data-toggle="modal", data-target-content='#cardModalSlider-02')
+					img.card-image(src=imgUrl)
+
+		.card-full-slider__item
+			.card__imgwrap
 				- var imgUrl = 'img/article-img-01.jpg';
 				.card__imgbox.card__imgbox_third(style='background-image: url('+imgUrl+')',  data-target="#modal-content-slider", data-toggle="modal",data-target-content='#cardModalSlider-02')
 					img.card-image(src=imgUrl)
