--- a/app/pug/profile.pug
+++ b/app/pug/profile.pug
@@ -20,7 +20,7 @@ block content
 				.content-text
 					h3 Главный инженер отделения трубопрокатного цеха
 						span.sub (Подразделение отдела № 1023)
-
+					a.change-profile.link-danger.link-small.xs-show(href="#") Редактировать профиль
 					table.profile-info.margin-bottom-lg-15.margin-bottom-10
 						tbody
 							tr
@@ -28,10 +28,10 @@ block content
 									p
 										span.light Телефон:
 								td
-									p +7&nbsp;(83&nbsp;177)&nbsp;3-76-05&nbsp;доб.&nbsp;4526
+									p +7&nbsp;(83&nbsp;177)&nbsp;3&#8209;76&#8209;05 доб.&nbsp;4526
 								td.text-right
 									p
-										a.link-danger.link-small(href="#") Редактировать профиль
+										a.change-profile.xs-hide.link-danger.link-small(href="#") Редактировать профиль
 							tr
 								td.text-right
 									p
@@ -94,7 +94,7 @@ block content
 				.card-links__img
 					.card-links__imgbox
 						img(src="img/icon/save.svg")
-				.card-links__items
+				.card-links__items.card-links__items_small-offset
 					- var items = [{type: 'Блог (25.10.19 от Русланова Михаила)', content: '"Почему так сильно перестроили расписание?"'}, {type: 'Новость от 08.02.19 (Региональные новости)', content: 'Более 10,6 млн тонн рулонного проката произвел литейно-прокатный комплек...'}, {type: 'Новость от 08.02.19 (Новости ОМК)', content: 'Применяемые технологические методы изготовления и ремонта'}, {type: 'Статья (Библиотека > Архив > Основные положения)', content: 'Типы производства по ГОСТ 14.004-83'}, {type: 'Документ (Компания > Конституция)', content: 'Конституция ОМК'}];
 					each item in items
 						.card-links__item
@@ -119,7 +119,7 @@ block content
 			- var n = 0;
 			while n < 5
 				- var n = n + 1;
-				.col-6.col-sm-6.col-md-4
+				.col-10.col-sm-6.col-md-4.m-auto.m-sm-0
 					.card-person.margin-bottom-15
 						.card-person__imgbox(style="background-image: url(img/widget-img-06.jpg)")
 							img(src="img/widget-img-06.jpg" alt="image")
