--- a/app/sass/_circuit.scss
+++ b/app/sass/_circuit.scss
@@ -19,21 +19,23 @@
 			font-family: Roboto, sans-serif;
 			font-size: 20px;
 			font-weight: 400;
-			line-height: 17px;
+			line-height: 1.4;
 			transition: 0.4s;
+			word-break: break-word;
 			@include hover {
 				border: 1px solid $basic-color;
 				background-color: $light-color;
 			}
 			@include lg-block {
 				width: 205px;
-				font-size: 11px;
+				font-size: 12px;
 				padding: 5px 10px;
 			}
 			@include xs-block {
 				width: 90px;
-				font-size: 9px;
-				line-height: 1.4;
+				font-size: 11px;
+				line-height: 1.2;
+				//word-break: break-word;
 			}
 			&_line-right {
 				margin-right: 30px;
