--- a/app/sass/_comment.scss
+++ b/app/sass/_comment.scss
@@ -65,6 +65,9 @@
 		color: $basic-color;
 		font-size: 14px;
 		font-weight: 400;
+		@include xs-block {
+			font-size: 16px;
+		}
 	}
 	&__date {
 		margin-bottom: 20px;
@@ -103,6 +106,10 @@
 			@include md-block {
 				font-size: 12px;
 				margin-bottom: 10px;
+			}
+			@include xs-block {
+				font-size: 16px;
+				line-height: 1.4;
 			}
 		}
 	}
