--- a/app/sass/_content.scss
+++ b/app/sass/_content.scss
@@ -72,7 +72,10 @@
 				font-weight: 400;
 				font-size: 22px;
 				@include md-block {
-					font-size: 12px;
+					font-size: 16px;
+				}
+				@include xs-block {
+					font-size: 18px;
 				}
 			}
 		}
@@ -143,7 +146,7 @@
 			font-size: 12px;
 		}
 		@include md-block {
-			font-size: 8px;
+			font-size: 10px;
 		}
 
 		h2 {
@@ -158,15 +161,15 @@
 			font-weight: inherit;
 			@include lg-block {
 				margin-bottom: 10px;
-				font-size: 18px;
+				font-size: 20px;
 
 			}
 			@include md-block {
 				margin-bottom: 5px;
-				font-size: 11px;
+				font-size: 18px;
 			}
 			@include xs-block {
-				font-size: 13px;
+				font-size: 16px;
 			}
 			.small {
 				display: block;
@@ -186,14 +189,11 @@
 			font-size: 17px;
 			margin-bottom: 5px;
 			@include lg-block {
-				font-size: 12px;
+				font-size: 14px;
 				margin-bottom: 0;
 			}
-			@include md-block {
-				font-size: 8px;
-			}
 			@include xs-block {
-				font-size: 10px;
+				font-size: 16px;
 				margin-bottom: 10px;
 			}
 			.light {
@@ -221,7 +221,10 @@
 				 color: #000000;
 				 line-height: 1.5;
 				 @include md-block {
-					 font-size: 8px;
+					 font-size: 10px;
+				 }
+				 @include xs-block {
+					 font-size: 14px;
 				 }
 			 }
 		}
@@ -299,12 +302,12 @@
 			font-size: 10px;
 		}
 		@include md-block {
-			font-size: 8px;
+			font-size: 10px;
 			line-height: 1.4;
 			vertical-align: top;
 		}
 		@include sm-block {
-			font-size: 12px;
+			font-size: 16px;
 		}
 		// transition: color 0.4s ease-out;
 		.icon-comment {
@@ -391,7 +394,7 @@
 			vertical-align: baseline;
 			@include md-block {
 				font-size: 12px;
-				line-height: 14.4px;
+				line-height: 19px;
 			}
 			@include xs-block {
 				display: none;
