--- a/app/sass/_header.scss
+++ b/app/sass/_header.scss
@@ -270,16 +270,23 @@
 			.form-search__label {
 				padding-top: 2px;
 				padding-bottom: 2px;
+				padding-right: 6px;
 				background-color: #fbfbfb;
 			}
 
 			.form-search__input {
 				display: block;
 				width: 100%;
+				max-width: 78px;
+
 				font-size: 12px;
 				line-height: 12px;
 				vertical-align: middle;
+
+				//@include lg-block {
+				//}
 			}
+
 			.form-search__button {
 				font-size: 12px;
 			}
@@ -467,7 +474,7 @@
 			//margin-top: -5px;
 			margin-left: -15px;
 			margin-right: -15px;
-			margin-top: 10px;
+			margin-top: 9px;
 			padding-bottom: 8px;
 		}
 		&-wrap{
