--- a/app/sass/_main-icons.scss
+++ b/app/sass/_main-icons.scss
@@ -3,6 +3,9 @@
 	&__card {
 		//transition: 0.4s;
 		background-color: #fff;
+		@include xs-block {
+			margin-bottom: 5px;
+		}
 		&.edits {
 			.main-icon__img {
 				cursor: pointer;
@@ -34,6 +37,12 @@
 		}
 	}
 	&__items {
+		@include lg-block {
+			padding-left: 0;
+		}
+		@include md-block {
+			padding-left: 28px;
+		}
 		@include xs-block {
 			padding-left: 14px;
 		}
@@ -42,13 +51,19 @@
 	&__item {
 
 		@include lg-block {
-			padding-left: 0;
+			//padding-left: 0;
 			margin-left: 0;
+		}
+		@include xs-block {
+			margin-bottom: 5px;
 		}
 
 	}
 	&__title {
 		//min-height: 26px;
+		@include xs-block {
+			text-align: left;
+		}
 	}
 	&__input {
 		width: 310px;
@@ -57,6 +72,9 @@
 		font-size: 12px;
 		line-height: 1.4;
 		background-color: $light-color;
+		@include xs-block {
+			width: 160px;
+		}
 	}
 	&__imgbox {
 		width: 60px;
@@ -68,6 +86,9 @@
 			vertical-align: middle;
 			@include md-block {
 				vertical-align: top;
+			}
+			@include xs-block {
+				vertical-align: middle;
 			}
 		}
 	}
@@ -81,6 +102,12 @@
 			@include hover {
 				color: #757575;
 			}
+		}
+	}
+	&__button {
+		margin-bottom: 5px;
+		@include xs-block {
+			margin-bottom: 10px;
 		}
 	}
 	&__images {
