--- a/app/sass/_nav.scss
+++ b/app/sass/_nav.scss
@@ -6,6 +6,12 @@
 	margin-right: -15px;
 	padding-top: 5px;
 	// @include mA();
+	@include lg-block {
+		padding-top: 12px;
+	}
+	@include sm-block {
+		padding-top: 5px;
+	}
 	&__content {
 		padding: 5px 15px 4px;
 		background-image: linear-gradient(180deg, #e4e4e4 0%, rgba(212, 212, 212, 0.24) 22%, #ececec 100%);
@@ -19,13 +25,18 @@
 			background-image: none;
 			filter: none;
 		}
+		@include xs-block {
+			max-height: calc(100vh - 147px);
+			overflow-y: scroll;
+			overflow-x: hidden;
+		}
 	}
 	&-wrap {
 		position: relative;
 		//margin-top: 5px;
 
 		@include lg-block {
-			margin-top: 10px;
+			//margin-top: 10px;
 		}
 		@include sm-block {
 			position: absolute;
@@ -284,6 +295,13 @@
 		}
 		@include sm-block {
 			position: static;
+		}
+		&-group {
+			@include xs-block {
+				max-height: calc(100vh - 147px);
+				overflow-y: scroll;
+				overflow-x: hidden;
+			}
 		}
 	}
 	&__button {
