--- a/app/sass/_widget.scss
+++ b/app/sass/_widget.scss
@@ -91,9 +91,17 @@
 				min-height: auto;
 			}
 		}
-		img {
-
+		&[style] {
+			min-height: 100%;
+			img {
+				//display: none;
+				opacity: 0;
+			}
 		}
+		//img {
+		//	//display: none;
+		//	opacity: 0;
+		//}
 		&_full {
 			height: 180px;
 			margin-bottom: 10px;
@@ -121,6 +129,9 @@
 				color: $light-color;
 				font-size: 18px;
 				font-weight: 400;
+				@include lg-block {
+					font-size: 14px;
+				}
 
 			}
 
@@ -128,6 +139,9 @@
 				color: #bcbdc0;
 				font-size: 16px;
 				font-weight: 400;
+				@include lg-block {
+					font-size: 10px;
+				}
 			}
 		}
 	}
@@ -151,7 +165,7 @@
 		&_ads {
 			min-height: 315px;
 			@include lg-block {
-				min-height: 275px;
+				min-height: 265px;
 			}
 			@include md-block {
 				min-height: 175px;
@@ -168,7 +182,10 @@
 			text-align: right;
 			@include lg-block {
 				//max-width: 45%;
-				max-width: 54px;
+				//max-width: 54px;
+				max-width: none;
+				width: 85px;
+				min-height: 110px;
 			}
 		}
 	}
@@ -242,7 +259,7 @@
 		font-size: 12px;
 		font-weight: 400;
 		@include lg-block {
-			font-size: 8px;
+			font-size: 10px;
 		}
 		@include md-block {
 			font-size: 6px;
@@ -257,6 +274,9 @@
 			font-family: "Roboto", sans-serif;
 			font-size: 14px;
 			font-weight: 400;
+			@include lg-block {
+				font-size: 12px;
+			}
 			@include md-block {
 				font-size: 10px;
 			}
